--- a/backend/package.json
+++ b/backend/package.json
@@ -7,5 +7,8 @@
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.17.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
