--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "dotenv": "^16.0.0",
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "pg": "^8.7.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
