--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "server",
+  "name": "x-stream",
   "version": "1.0.0",
   "main": "index.js",
   "author": "Deekshant Yadav <d33kshant@gmail.com>",
