--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-fileupload": "^1.3.1",
+    "fluent-ffmpeg": "^2.1.2",
     "pg": "^8.7.3",
     "shortid": "^2.2.16"
   },
